[package]
name = "rpn_calc"
version = "0.1.0"
authors = ["V360 <v360code@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
raylib = "1.0.0"
# stdweb = "0.4.20"
# lexical = "^5.0"
